syntax = "proto3";

package product;

// Définition du message Product
message Product {
  int32 id = 1;
  string name = 2;
  float price = 3;
  // Ajoutez d'autres champs de données pour les produits au besoin
}

// Définition des messages de requête et de réponse pour les méthodes du service
message GetProductRequest {
  string product_id = 1;
}

message GetProductResponse {
  Product product = 1;
}

message CreateProductRequest {
  Product product = 1;
}

message CreateProductResponse {
  string product_id = 1;
}

// Définition du service de gestion des produits
service ProductService {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  // Ajoutez d'autres méthodes au besoin
}
